--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <img src="images/shopping-bag.png">
     </div>
   </nav>
-  <section id="herod">
-    <div id="featuredGriProduct" class="heroGridArea">
+  <section id="heroGrid">
+    <div id="featuredProduct" class="heroGridArea">
       <div id="headline">
         <h3 id="newCollection">New Collection</h3>
         <h2>Chairs & Stools</h2>
